timezone and more settings for supervisord

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -3,9 +3,11 @@ nodaemon = true
 
 [program:mongodb]
 command = /usr/bin/mongod --dbpath /data/db
+priority = 1
 
 [program:nginx]
 command = /usr/sbin/nginx
+priority = 1
 
 [program:server_connector]
 directory = /opt/appx/connector
@@ -16,6 +18,10 @@ stdout_logfile_maxbytes = 1MB
 stdout_logfile_backups = 10
 stdout_capture_maxbytes = 1MB
 stdout_events_enabled = true
+startsecs = 5
+startretries = 5
+autorestart = true
+priority = 2
 
 [program:mongo_connector]
 directory = /opt/appx/connector
@@ -26,3 +32,7 @@ stdout_logfile_maxbytes = 1MB
 stdout_logfile_backups = 10
 stdout_capture_maxbytes = 1MB
 stdout_events_enabled = true
+startsecs = 5
+startretries = 5
+autorestart = true
+priority = 2
